--- a/package.json
+++ b/package.json
@@ -9,16 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.0.10",
+    "@ai-sdk/openai": "^1.0.8",
+    "@ai-sdk/react": "^1.0.6",
+    "@clerk/nextjs": "^6.3.0",
+    "@langchain/community": "^0.3.14",
+    "@langchain/core": "^0.3.18",
+    "@pinecone-database/pinecone": "^4.0.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.59.20",
+    "ai": "^4.0.18",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "langchain": "^0.3.5",
+    "lucide-react": "^0.456.0",
+    "md5": "^2.3.0",
+    "next": "15.0.3",
+    "pdf-parse": "^1.1.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@neondatabase/serverless": "^0.10.3",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.28.0",
+    "drizzle-orm": "^0.36.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
