--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "md5": "^2.3.0",
     "next": "15.0.3",
     "pdf-parse": "^1.1.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
