--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "fs": "^0.0.1-security",
     "langchain": "^0.3.5",
     "lucide-react": "^0.456.0",
     "md5": "^2.3.0",
     "next": "15.0.3",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.9.155",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
@@ -42,6 +44,7 @@
     "@types/md5": "^2.3.5",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.4",
+    "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.28.0",
